# syncookies

./: .gitignore  Cargo.toml  README.md  flake.nix
.vim/: coc-settings.json
syncookies/: Cargo.toml
syncookies-common/: Cargo.toml
syncookies-common/src/: lib.rs
syncookies-ebpf/: Cargo.toml
syncookies-ebpf/src/: bindings.rs  constants.rs  main.rs  xdp_filter.c
syncookies/src/: main.rs
xtask/: Cargo.toml
xtask/src/: build_ebpf.rs  codegen.rs  main.rs  run.rs
